# tauri-plugin-crypto-hw

./: Cargo.toml  LICENSE.md  README.md  biome.json  build.rs  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: publish-npm.yml
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Base58btc.kt  CryptoPlugin.kt  Example.kt  ExamplePlugin.kt  Hex.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Sign.svelte  Verify.svelte
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: Base58btc.swift  CryptoPlugin.swift  Hex.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: exists.toml  generate.toml  get_public_key.toml  sign_payload.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
