[package]
name = "tauri-plugin-crypto-hw"
version = "0.1.0"
authors = [ "SoSweetHam <soham@auvo.io>" ]
license = "MIT"
description = "Android/iOS StrongBox/Secure Enclave Bindings+Wrapper for Tauri"
homepage = "https://auvo.io"
repository = "https://github.com/auvoid/tauri-plugin-crypto-hw"
readme = "README.md"
keywords = ["tauri", "crypto", "tpm", "strongbox", "secure enclave"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-crypto-hw"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
